--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./coundown.ico" type="image/x-icon">
-    <title>Coundown</title>
+    <title>Countdown</title>
 </head>
 <body>
     
     <div>
-        <p id="twentyThree">Coundown For New Year <br>2023</p>
+        <p id="twentyThree">Countdown For New Year <br>2023</p>
     
     <div id="time">
         <div class="circle" style="--clr: #fff;">
